# basic-ai-auto-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyautogui.py  pyproject.toml  requirements.txt  run.py
.github/: branch-protection.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml
docs/: conf.py  index.rst  modules.rst  quiz_automation.rst
quiz_automation/: __init__.py  automation.py  chatgpt_client.py  clicker.py  config.py  cv_expert.py  gui.py  logger.py  model_client.py  model_protocol.py  ocr.py  persistence.py  region_selector.py  runner.py  stats.py  types.py  utils.py  watcher.py
server/: Dockerfile  __init__.py  app.py  main.py
tests/: README  test_automation.py  test_chatgpt_client.py  test_chatgpt_flow.py  test_clicker.py  test_config.py  test_cv_expert.py  test_gui.py  test_logger.py  test_model_client.py  test_no_empty_files.py  test_ocr.py  test_persistence.py  test_region_selector.py  test_run.py  test_runner.py  test_server.py  test_stats.py  test_utils.py  test_watcher.py
